tests/paczka1/fuzzy1/85885283.err
Error in line 6: n9mvm A578 99,9
Error in line 13: n9mvm A589 80,2
Error in line 23: DQKN7DufV S297 218,10
Error in line 29: n9mvm A5|9 4|,0
Error in line 16: p9OKT8TFOdA A578 82,2
Error in line 32: n9mvm A589 208,8
Error in line 31: v4Rhvbs S697 65,7
